# pico-I2C

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  pico_i2c.cpp  pico_i2c.hpp
